# CRUDapp

./: db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_12_1155-9ecfa3a78d5f_create_products_table.py  2024_01_12_1204-1303a617860c_create_users_table.py  2024_01_12_1221-28bc0768d420_create_posts_table.py  2024_01_12_1243-41991ab27399_create_profile_table.py
api_v1/: __init__.py
api_v1/billboards/: schemas.py
core/: config.py
core/models/: __init__.py  billboards.py  mixins.py  post.py  profile.py  user.py
users/: schemas.py  views.py
